# novel-local-studio

./: .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.old/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.old/.sisyphus/plans/: novel-studio-roadmap.md
.old/app/: index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
.old/app/src/: App.tsx  index.css  main.tsx  types.ts
.old/app/src-tauri/: Cargo.toml  tauri.conf.json
.old/app/src-tauri/capabilities/: default.json
.old/app/src-tauri/src/: main.rs
.old/docs/: api.md  architecture.md  features.md  roadmap.md
.old/mastra/: package.json
.old/mastra/scripts/: bundle.mjs
.old/mastra/src/: mastra.ts  server.ts
.old/patches/: @mastra__core@1.17.0.patch
.old/scripts/: build-sidecar.mjs  dev-api.mjs  dev-services.mjs  with-env.mjs
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/chat/: ChatPanel.tsx
app/src/components/: EmbeddingStatusBar.tsx
app/src/lib/: serverInfo.ts
app/src/settings/: SettingsModal.tsx  agent-form.tsx  api.ts  embedding-presets.ts  types.ts
app/src/splash/: SplashScreen.tsx
docs/: design.md
mastra/: package.json  tsconfig.json
mastra/scripts/: bundle.ts  copy-native.ts
mastra/src/: logs.ts  server.ts
mastra/src/db/: books.ts  (+4 more)
scripts/: download-node.ts  ensure-native-abi.ts  prepare-resources.ts
(+87 files in other folders)
