[package]
name = "novel_local_studio"
version = "0.1.0"
description = "Novel Local Studio desktop shell"
authors = ["OpenCode"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
axum = "0.7.9"
include_dir = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6.6", features = ["cors"] }
once_cell = "1.21.3"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
